--- a/src/Cassette.Nancy.Demo.MVC3/Web.config
+++ b/src/Cassette.Nancy.Demo.MVC3/Web.config
@@ -4,11 +4,16 @@
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
 <configuration>
+  <configSections>
+    <sectionGroup name="system.web.webPages.razor" type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+      <section name="pages" type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" />
+    </sectionGroup>
+  <section name="razor" type="Nancy.ViewEngines.Razor.RazorConfigurationSection, Nancy.ViewEngines.Razor" /></configSections>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  </appSettings>
+  <add key="webPages:Enabled" value="false" /></appSettings>
   <system.web>
     <compilation debug="false" targetFramework="4.0">
       <assemblies>
@@ -18,7 +23,10 @@
         <add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
-    </compilation>
+    <buildProviders>
+				<add extension=".cshtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyCSharpRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
+				<add extension=".vbhtml" type="Nancy.ViewEngines.Razor.BuildProviders.NancyVisualBasicRazorBuildProvider, Nancy.ViewEngines.Razor.BuildProviders" />
+			</buildProviders></compilation>
     <authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
     </authentication>
@@ -50,6 +58,24 @@
         <assemblyIdentity name="dotless.ClientOnly" publicKeyToken="96b446c9e63eae34" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.3.0.5" newVersion="1.3.0.5" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<system.web.webPages.razor>
+    <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
+      <namespaces>
+        <add namespace="Nancy.ViewEngines.Razor" />
+      </namespaces>
+    </pages>
+  </system.web.webPages.razor><razor disableAutoIncludeModelNamespace="true">
+    <assemblies>
+      <add assembly="Cassette" />
+      <add assembly="Cassette.Nancy" />
+    </assemblies>
+    <namespaces>
+      <add namespace="Cassette.Nancy" />
+    </namespaces>
+  </razor></configuration>
