--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\dependencies\cassette\src\Cassette.CoffeeScript\packages.config" />
+  <repository path="..\..\dependencies\cassette\src\Cassette\packages.config" />
   <repository path="..\Cassette.Nancy.Demo.Autofac\packages.config" />
+  <repository path="..\Cassette.Nancy.Demo.MVC3\packages.config" />
   <repository path="..\Cassette.Nancy.Demo.TinyIoC\packages.config" />
   <repository path="..\Cassette.Nancy.Test\packages.config" />
   <repository path="..\Cassette.Nancy\packages.config" />
